[package]
name = "geospatial"
version = "0.1.4"
edition = "2024"
authors = ["Matt Wilkins (https://github.com/mrmattwilkins)"]
license = "MIT"
description = "Geospatial utility functions"
readme = "README.md"
repository = "https://github.com/mrmattwilkins/geospatial"
homepage = "https://github.com/mrmattwilkins/geospatial"
documentation = "https://docs.rs/geospatial"
keywords = ["geospatial", "GIS"]
categories = ["science::geo"]

[profile.release]
opt-level = 3

[dependencies]
geo = ">=0.20.0, <0.40.0"
line_drawing = ">=1.0.0, < 2.0.0"
ndarray = "0.16.1"
